  *    tasks for each driver is called
  *  - Added standard keyboard HID report scancode defines (thanks to Laszlo Monda)
  *  - Added new Pipe_GetBusyBanks(), Endpoint_GetBusyBanks() and Endpoint_AbortPendingIN() functions
  *  - Added new NO_BLOCK_SUPPORT, NO_EEPROM_BYTE_SUPPORT, NO_FLASH_BYTE_SUPPORT and NO_LOCK_BYTE_WRITE_SUPPORT compile time options to the
  *    CDC class bootloader
  *
  *  <b>Changed:</b>
  *  - Removed complicated logic for the Endpoint_ConfigureEndpoint() function to use inlined or function called versions
  *    depending of if the given bank size is a compile time constant, as the compiler does a better job of optimizing
  *    with basic code
  *  - Changed over all device demos to use a clearer algorithm for the configuring of the application's endpoints
  *  - Added missing DataflashManager_CheckDataflashOperation() function to the MassStorageKeyboard demo, removed redundant
  *    SCSI_Codes.h file as these values are part of the MassStorage Class Driver
  *  - Added compile time error to the AVRISP-MKII project when built for the U4 chips, as the default VTARGET detection ADC channel
  *    does not exist on these chips (thanks to Marco)
  *  - Changed all Device mode LowLevel demos and Device Class drivers so that the control request is acknowledged and any data
  *    transferred as quickly as possible without any processing inbetween sections, so that long callbacks or event handlers will
  *    not break communications with the host by exceeding the maximum control request stage timeout period
  *  - Changed the signature of the CALLBACK_USB_GetDescriptor() callback function so that the descriptor pointer is const, to remove
  *    the need for extra casting inside the callback (thanks to Jonathan Kollasch)
  *  - Reduced HOST_DEVICE_SETTLE_DELAY_MS to 1000ms down from 1500ms to improve device compatibility while in USB Host mode