@@ -137,6 +137,7 @@ LUFA_OPTS += -D VTARGET_REF_VOLTS=5
 LUFA_OPTS += -D VTARGET_SCALE_FACTOR=1
 #LUFA_OPTS += -D NO_VTARGET_DETECT
 #LUFA_OPTS += -D LIBUSB_DRIVER_COMPAT
+#LUFA_OPTS += -D XCK_RESCUE_CLOCK_ENABLE
 
 
 # Create the LUFA source path variables by including the LUFA root makefile
